updated folders alles auf gleicher ebene

--- a/nathan.html
+++ b/nathan.html
@@ -30,26 +30,26 @@
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
 
     <ul class="breadcrumbs1">
 
         <li class="breadcrumbs__item">
-            <a href="/Produkte/Produkte.html" class="breadcrumbs__link">Styles</a>
+            <a href="produkt.html" class="breadcrumbs__link">Styles</a>
         </li>
 
         <li class="breadcrumbs__item">
-            <a href="/Home/Home.html" class="breadcrumbs__link">Home</a>
+            <a href="home.html" class="breadcrumbs__link">Home</a>
         </li>
 
         <li class="breadcrumbs__item">
-            <a href="/Nathan/Nathan.html" class="breadcrumbs__link--active">Nathan</a>
+            <a href="nathan.html" class="breadcrumbs__link--active">Nathan</a>
         </li>
     </ul>
 
     <div class="Produkt-container">
         <div class="Produkt-Bild">
-            <img src="/Bilder/Nathan.jpg" class="img">
+            <img src="Nathan.jpg" class="img">
         </div>
 
 
