--- a/team.html
+++ b/team.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Team.css">
+    <link rel="stylesheet" href="team.css">
     <title>Team</title>
 </head>
 
 <body>
     <!--Bild ganz oben einfügen-->
     <div class="header-container">
-        <a href="/Startseite/index.html">
-            <img src="/bilder/billdlampe.png">
+        <a href="index.html">
+            <img src="billdlampe.png">
         </a>
 
     </div>
@@ -23,20 +23,20 @@
     <div class="navigation-container">
 
         <!-- Items erstellen-->
-        <div class="navigation-item"><a href="/Startseite/index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="/Produkte/Produkte.html">Produkte</a></div>
-        <div class="navigation-item"><a href="/Team/Team.html">Team</a></div>
-        <div class="navigation-item"><a href="/Über Uns/überuns.html">Über Uns</a></div>
+        <div class="navigation-item"><a href="index.html">Startseite</a></div>
+        <div class="navigation-item"><a href="produkte.html">Produkte</a></div>
+        <div class="navigation-item"><a href="team.html">Team</a></div>
+        <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
 
     <h1 class="Kontakformular">Organisation Holding</h1>
 
     <div class="Hauptcontainer3">
         <div class="Bildconainer4">
-            <img src="/Bilder/thomas mattmann.jpg" class="img2">
+            <img src="thomas mattmann.jpg" class="img2">
             <div class="Bilder-text">
                 Thomas Mattmann<br>
                 CEO Schuber Holding
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/Stefan kreier.jpg" class="img2">
+            <img src="Stefan kreier.jpg" class="img2">
             <div class="Bilder-text">
                 Stefan Kreier<br>
                 CFO Schuber Holding
@@ -58,7 +58,7 @@
     <div class="Hauptcontainer4">
 
         <div class="Bildconainer4">
-            <img src="/Bilder/thomas höchli.jpg" class="img2">
+            <img src="thomas höchli.jpg" class="img2">
 
             <div class="Bilder-text">
                 Thomas Höchli<br>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/stefan-stefancik-QXevDflbl8A-unsplash.jpg" class="img2">
+            <img src="stefan-stefancik-QXevDflbl8A-unsplash.jpg" class="img2">
             <div class="Bilder-text">
                 Silvia Gerber<br>
                 CEO Schuber Garten
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/Fabian Jenni.jpg" class="img2">
+            <img src="Fabian Jenni.jpg" class="img2">
             <div class="Bilder-text">
                 Fabian Jenni<br>
                 CEO Schuber Schlaf
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/kurt vonal.jpg" class="img2">
+            <img src="kurt vonal.jpg" class="img2">
             <div class="Bilder-text">
                 Kurt Vonaltbrug<br>
                 CEO Schuber Küchenbau
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/Marianna egli.jpg" class="img2">
+            <img src="Marianna egli.jpg" class="img2">
             <div class="Bilder-text">
                 Marianna Egli<br>
                 CEO Schuber Aufbewahrung
@@ -105,7 +105,7 @@
 
     <div class="Hauptcontainer3">
         <div class="Bildconainer4">
-            <img src="/Bilder/thomas höchli.jpg" class="img2">
+            <img src="thomas höchli.jpg" class="img2">
             <div class="Bilder-text">
                 Thomas Höchli<br>
                 CEO Schuber Lampen
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/silvio muri 2.jpg" class="img2">
+            <img src="silvio muri 2.jpg" class="img2">
             <div class="Bilder-text">
                 Silvio Muri<br>
                 Leiter Administration
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/Annina Moor.jpg" class="img2">
+            <img src="Annina Moor.jpg" class="img2">
             <div class="Bilder-text">
                 Annina Moor<br>
                 Design & Entwicklung
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/Fabian Steffen.jpg" class="img2">
+            <img src="Fabian Steffen.jpg" class="img2">
             <div class="Bilder-text">
                 Fabian Steffen<br>
                 Leiter Herstellung
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/Peter Schaller.jpg" class="img2">
+            <img src="Peter Schaller.jpg" class="img2">
             <div class="Bilder-text">
                 Peter Schaller<br>
                 Leiter Vertrieb
@@ -170,11 +170,11 @@
             </div>
 
             <div class="kleinercontainera">
-                <a href="/Kontaktformular/Kontaktformular.html" class="link">Kontakformular</a><br><br>
-                <a href="/herstellungdesign/herstellungdesign.html" class="link">Herstellung & Design</a><br><br>
-                <a href="/showroom/showroom.html" class="link">Showroom</a><br><br>
-                <a href="/dienstleistungen/dienstleistungen.html" class="link">Dienstleistungen</a><br><br>
-                <a href="/SmartSchubertm/smartschuber.html" class="link">SmartSchuber™</a>
+                <a href="kontaktformular.html" class="link">Kontakformular</a><br><br>
+                <a href="herstellungdesign.html" class="link">Herstellung & Design</a><br><br>
+                <a href="showroom.html" class="link">Showroom</a><br><br>
+                <a href="dienstleistungen.html" class="link">Dienstleistungen</a><br><br>
+                <a href="smartschuber.html" class="link">SmartSchuber™</a>
 
             </div>
 
