--- a/office.html
+++ b/office.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/office/office.css">
+    <link rel="stylesheet" href="office.css">
     <title>Office</title>
 </head>
 
 <body>
     <!--Bild ganz oben einfügen-->
     <div class="header-container">
-        <a href="/Startseite/index.html">
-            <img src="/bilder/billdlampe.png">
+        <a href="index.html">
+            <img src="billdlampe.png">
         </a>
 
     </div>
@@ -23,22 +23,22 @@
     <div class="navigation-container">
 
         <!-- Items erstellen-->
-        <div class="navigation-item"><a href="/Startseite/index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="/Produkte/Produkte.html">Produkte</a></div>
-        <div class="navigation-item"><a href="/Team/Team.html">Team</a></div>
-        <div class="navigation-item"><a href="/Über Uns/überuns.html">Über Uns</a></div>
+        <div class="navigation-item"><a href="index.html">Startseite</a></div>
+        <div class="navigation-item"><a href="produkt.html">Produkte</a></div>
+        <div class="navigation-item"><a href="team.html">Team</a></div>
+        <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
 
     <ul class="breadcrumbs1">
         <li class="breadcrumbs__item">
-            <a href="/Produkte/Produkte.html" class="breadcrumbs__link">Styles</a>
+            <a href="produkt.html" class="breadcrumbs__link">Styles</a>
 
         </li>
         <li class="breadcrumbs__item">
-            <a href="/office/office.html" class="breadcrumbs__link--active">Office</a>
+            <a href="office.html" class="breadcrumbs__link--active">Office</a>
 
         </li>
     </ul>
@@ -46,8 +46,8 @@
     <div class="Produkte-container">
 
         <div class="Produkt-item">
-            <a href="/Pierre/Pierre.html">
-                <img src="/Neue Bilder/Pierre_h.png" class="img">
+            <a href="pierre.html">
+                <img src="Pierre_h.png" class="img">
                 <div class="Produkt-text">Pierre</div>
             </a>
         </div>
@@ -55,15 +55,15 @@
 
 
         <div class="Produkt-item">
-            <a href="/Hutomo/Hutomo.html">
-                <img src="/Bilder/Hutomo.jpg" class="img">
+            <a href="hutomo.html">
+                <img src="Hutomo.jpg" class="img">
                 <div class="Produkt-text">Hutomo</div>
             </a>
         </div>
 
         <div class="Produkt-item">
-            <a href="/Camille/Camille.html">
-                <img src="/Bilder/Camille.jpg" class="img">
+            <a href="camille.html">
+                <img src="Camille.jpg" class="img">
                 <div class="Produkt-text">Camille</div>
             </a>
         </div>
