--- a/produkt.html
+++ b/produkt.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Produkte.css">
+    <link rel="stylesheet" href="produkt.css">
     <title>Produkt Seite</title>
 </head>
 
 <body>
     <!--Bild ganz oben einfügen-->
     <div class="header-container">
-        <a href="/Startseite/index.html">
-            <img src="/bilder/billdlampe.png">
+        <a href="index.html">
+            <img src="billdlampe.png">
         </a>
 
     </div>
@@ -23,18 +23,18 @@
     <div class="navigation-container">
 
         <!-- Items erstellen-->
-        <div class="navigation-item"><a href="/Startseite/index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="/Produkte/Produkte.html">Produkte</a></div>
-        <div class="navigation-item"><a href="/Team/Team.html">Team</a></div>
-        <div class="navigation-item"><a href="/Über Uns/überuns.html">Über Uns</a></div>
+        <div class="navigation-item"><a href="index.html">Startseite</a></div>
+        <div class="navigation-item"><a href="produkt.html">Produkte</a></div>
+        <div class="navigation-item"><a href="team.html">Team</a></div>
+        <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
 
     <h1>Styles</h1>
 
-    <a href="/alleprodukte/alleprodukete.html">
+    <a href="alleprodukete.html">
         <div class="alle-produkte">Alle Produkte</div>
     </a>
 
@@ -42,26 +42,26 @@
     <div class="Produkte-container">
 
         <div class="produkt-item">
-            <a href="/Home/Home.html">
-                <img src="/Bilder/home home.png" class="img">
+            <a href="home.html">
+                <img src="home home.png" class="img">
             </a>
         </div>
 
         <div class="produkt-item">
-            <a href="/Studio/studio.html">
-                <img src="/Bilder/Home (1).png" class="img">
+            <a href="studio.html">
+                <img src="Home (1).png" class="img">
             </a>
         </div>
 
         <div class="produkt-item">
-            <a href="/office/office.html">
-                <img src="/Bilder/Office (1).png" class="img">
+            <a href="office.html">
+                <img src="Office (1).png" class="img">
             </a>
         </div>
 
         <div class="produkt-item">
-            <a href="/Design/design.html">
-                <img src="/bilder/design real.png" class="img">
+            <a href="design.html">
+                <img src="design real.png" class="img">
             </a>
         </div>
     </div>
@@ -88,11 +88,11 @@
 
             <div class="kleinercontainera">
 
-                <a href="/Kontaktformular/Kontaktformular.html" class="link">Kontakformular</a><br><br>
-                <a href="/herstellungdesign/herstellungdesign.html" class="link">Herstellung & Design</a><br><br>
-                <a href="/showroom/showroom.html" class="link">Showroom</a><br><br>
-                <a href="/dienstleistungen/dienstleistungen.html" class="link">Dienstleistungen</a><br><br>
-                <a href="/SmartSchubertm/smartschuber.html" class="link">SmartSchuber™</a>
+                <a href="kontaktformular.html" class="link">Kontakformular</a><br><br>
+                <a href="herstellungdesign.html" class="link">Herstellung & Design</a><br><br>
+                <a href="showroom.html" class="link">Showroom</a><br><br>
+                <a href="dienstleistungen.html" class="link">Dienstleistungen</a><br><br>
+                <a href="smartschuber.html" class="link">SmartSchuber™</a>
 
             </div>
 
