--- a/samuel.html
+++ b/samuel.html
@@ -12,8 +12,8 @@
 <body>
     <!--Bild ganz oben einfügen-->
     <div class="header-container">
-        <a href="/Startseite/index.html">
-            <img src="/bilder/billdlampe.png">
+        <a href="index.html">
+            <img src="billdlampe.png">
         </a>
 
     </div>
@@ -23,33 +23,33 @@
     <div class="navigation-container">
 
         <!-- Items erstellen-->
-        <div class="navigation-item"><a href="/Startseite/index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="/Produkte/Produkte.html">Produkte</a></div>
-        <div class="navigation-item"><a href="/Team/Team.html">Team</a></div>
-        <div class="navigation-item"><a href="/Über Uns/überuns.html">Über Uns</a></div>
+        <div class="navigation-item"><a href="index.html">Startseite</a></div>
+        <div class="navigation-item"><a href="produkt.html">Produkte</a></div>
+        <div class="navigation-item"><a href="team.html">Team</a></div>
+        <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
 
     <ul class="breadcrumbs1">
 
         <li class="breadcrumbs__item">
-            <a href="/Produkte/Produkte.html" class="breadcrumbs__link">Styles</a>
+            <a href="produkt.html" class="breadcrumbs__link">Styles</a>
         </li>
 
         <li class="breadcrumbs__item">
-            <a href="/Design/design.html" class="breadcrumbs__link">Design</a>
+            <a href="design.html" class="breadcrumbs__link">Design</a>
         </li>
 
         <li class="breadcrumbs__item">
-            <a href="/Samuel/Samuel.html" class="breadcrumbs__link--active">Samuel</a>
+            <a href="samuel.html" class="breadcrumbs__link--active">Samuel</a>
         </li>
     </ul>
 
     <div class="Produkt-container">
         <div class="Produkt-Bild">
-            <img src="/Neue Bilder/Samuel_h.png" class="img">
+            <img src="Samuel_h.png" class="img">
         </div>
 
 
