--- a/schuberholding.html
+++ b/schuberholding.html
@@ -14,8 +14,8 @@
 <body>
     <!--Bild ganz oben einfügen-->
     <div class="header-container">
-        <a href="/Startseite/index.html">
-            <img src="/bilder/billdlampe.png">
+        <a href="index.html">
+            <img src="billdlampe.png">
         </a>
 
     </div>
@@ -25,14 +25,14 @@
     <div class="navigation-container">
 
         <!-- Items erstellen-->
-        <div class="navigation-item"><a href="/Startseite/index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="/Produkte/Produkte.html">Produkte</a></div>
-        <div class="navigation-item"><a href="/Team/Team.html">Team</a></div>
-        <div class="navigation-item"><a href="/Über Uns/überuns.html">Über Uns</a></div>
+        <div class="navigation-item"><a href="ndex.html">Startseite</a></div>
+        <div class="navigation-item"><a href="produkt.html">Produkte</a></div>
+        <div class="navigation-item"><a href="team.html">Team</a></div>
+        <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
 
     <h1 class="Kontakformular">Schuber Holding</h1>
 
@@ -46,7 +46,7 @@
         </div>
 
         <div class="Bildconainer">
-            <img src="/Bilder/ant-rozetsky-SLIFI67jv5k-unsplash.jpg" class="img">
+            <img src="ant-rozetsky-SLIFI67jv5k-unsplash.jpg" class="img">
         </div>
     </div>
 
@@ -56,7 +56,7 @@
 
         <div class="Bildconainer2">
 
-            <img src="/Bilder/michael-olsen-vNIgKjZbJW0-unsplash.jpg" class="img">
+            <img src="michael-olsen-vNIgKjZbJW0-unsplash.jpg" class="img">
         </div>
 
         <div class="Textcontainer">
@@ -83,7 +83,7 @@
 
         <div class="Bildconainer">
 
-            <img src="/Bilder/alesia-kazantceva-VWcPlbHglYc-unsplash.jpg" class="img">
+            <img src="alesia-kazantceva-VWcPlbHglYc-unsplash.jpg" class="img">
         </div>
     </div>
 
@@ -116,12 +116,12 @@
 
             <div class="kleinercontainera">
 
-                <a href="/Kontaktformular/Kontaktformular.html">Kontakformular</a><br><br>
-                <a href="/herstellungdesign/herstellungdesign.html">Herstellung & Design</a><br><br>
-                <a href="/schuberholding/schuberholding.html">Schuber Holding</a><br><br>
-                <a href="/showroom/showroom.html">Showroom</a><br><br>
-                <a href="/dienstleistungen/dienstleistungen.html">Dienstleistungen</a><br><br>
-                <a href="/SmartSchubertm/smartschuber.html">SmartSchuber™</a>
+                <a href="kontaktformular.html">Kontakformular</a><br><br>
+                <a href="herstellungdesign.html">Herstellung & Design</a><br><br>
+                <a href="schuberholding.html">Schuber Holding</a><br><br>
+                <a href="showroom.html">Showroom</a><br><br>
+                <a href="dienstleistungen.html">Dienstleistungen</a><br><br>
+                <a href="smartschuber.html">SmartSchuber™</a>
 
             </div>
 
