--- a/smartschuber.html
+++ b/smartschuber.html
@@ -12,8 +12,8 @@
 <body>
     <!--Bild ganz oben einfügen-->
     <div class="header-container">
-        <a href="/index.html">
-            <img src="/bilder/billdlampe.png">
+        <a href="index.html">
+            <img src="billdlampe.png">
         </a>
 
     </div>
@@ -23,14 +23,14 @@
     <div class="navigation-container">
 
         <!-- Items erstellen-->
-        <div class="navigation-item"><a href="/index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="/Produkte/Produkte.html">Produkte</a></div>
-        <div class="navigation-item"><a href="/Team/Team.html">Team</a></div>
-        <div class="navigation-item"><a href="/Über Uns/überuns.html">Über Uns</a></div>
+        <div class="navigation-item"><a href="index.html">Startseite</a></div>
+        <div class="navigation-item"><a href="produkt.html">Produkte</a></div>
+        <div class="navigation-item"><a href="team.html">Team</a></div>
+        <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
 
     <h1 class="Kontakformular">SmartSchuber™</h1>
 
@@ -44,7 +44,7 @@
         </div>
 
         <div class="Bildconainer">
-            <img src="/Bilder/photo-1560448204-603b3fc33ddc.jpg" class="img">
+            <img src="photo-1560448204-603b3fc33ddc.jpg" class="img">
         </div>
     </div>
 
@@ -54,7 +54,7 @@
 
 
         <div class="Bildconainer3">
-            <img src="/Bilder/gini.png" class="img2">
+            <img src="gini.png" class="img2">
         </div>
 
         <div class="Textcontainer3">
@@ -81,7 +81,7 @@
 
         </div>
         <div class="Bildconainer4">
-            <img src="/Bilder/lampentome.png" class="img2">
+            <img src="lampentome.png" class="img2">
         </div>
     </div>
 
@@ -114,11 +114,11 @@
 
             <div class="kleinercontainera">
 
-                <a href="/Kontaktformular/Kontaktformular.html" class="link">Kontakformular</a><br><br>
-                <a href="/herstellungdesign/herstellungdesign.html" class="link">Herstellung & Design</a><br><br>
-                <a href="/showroom/showroom.html" class="link">Showroom</a><br><br>
-                <a href="/dienstleistungen/dienstleistungen.html" class="link">Dienstleistungen</a><br><br>
-                <a href="/SmartSchubertm/smartschuber.html" class="link">SmartSchuber™</a>
+                <a href="kontaktformular.html" class="link">Kontakformular</a><br><br>
+                <a href="herstellungdesign.html" class="link">Herstellung & Design</a><br><br>
+                <a href="showroom.html" class="link">Showroom</a><br><br>
+                <a href="dienstleistungen.html" class="link">Dienstleistungen</a><br><br>
+                <a href="smartschuber.html" class="link">SmartSchuber™</a>
 
             </div>
 
