--- a/studio.html
+++ b/studio.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Studio/studio.css">
+    <link rel="stylesheet" href="studio.css">
     <title>Studio</title>
 </head>
 
 <body>
     <!--Bild ganz oben einfügen-->
     <div class="header-container">
-        <a href="/Startseite/index.html">
-            <img src="/bilder/billdlampe.png">
+        <a href="index.html">
+            <img src="billdlampe.png">
         </a>
 
     </div>
@@ -23,21 +23,21 @@
     <div class="navigation-container">
 
         <!-- Items erstellen-->
-        <div class="navigation-item"><a href="/Startseite/index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="/Produkte/Produkte.html">Produkte</a></div>
-        <div class="navigation-item"><a href="/Team/Team.html">Team</a></div>
-        <div class="navigation-item"><a href="/Über Uns/überuns.html">Über Uns</a></div>
+        <div class="navigation-item"><a href="index.html">Startseite</a></div>
+        <div class="navigation-item"><a href="produkt.html">Produkte</a></div>
+        <div class="navigation-item"><a href="team.html">Team</a></div>
+        <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
     <ul class="breadcrumbs1">
         <li class="breadcrumbs__item">
-            <a href="/Produkte/Produkte.html" class="breadcrumbs__link">Styles</a>
+            <a href="produkt.html" class="breadcrumbs__link">Styles</a>
 
         </li>
         <li class="breadcrumbs__item">
-            <a href="/Studio/studio.html" class="breadcrumbs__link--active">Studio</a>
+            <a href="studio.html" class="breadcrumbs__link--active">Studio</a>
 
         </li>
     </ul>
@@ -45,8 +45,8 @@
     <div class="Produkte-container">
 
         <div class="Produkt-item">
-            <a href="/Denovo/Denovo.html">
-                <img src="/Neue Bilder/Denovo_h.png" class="img">
+            <a href="denovo.html">
+                <img src="Denovo_h.png" class="img">
                 <div class="Produkt-text">Denovo</div>
             </a>
         </div>
@@ -54,15 +54,15 @@
 
 
         <div class="Produkt-item">
-            <a href="/Jonny/Jonny.html">
-                <img src="/Bilder/Jonny.jpg" class="img">
+            <a href="jonny.html">
+                <img src="Jonny.jpg" class="img">
                 <div class="Produkt-text">Jonny</div>
             </a>
         </div>
 
         <div class="Produkt-item">
-            <a href="/Steve/Steve.html">
-                <img src="/Neue Bilder/Steve_h.png" class="img">
+            <a href="steve.html">
+                <img src="Steve_h.png" class="img">
                 <div class="Produkt-text">Steve</div>
             </a>
         </div>
