--- a/sven.html
+++ b/sven.html
@@ -12,8 +12,8 @@
 <body>
     <!--Bild ganz oben einfügen-->
     <div class="header-container">
-        <a href="/Startseite/index.html">
-            <img src="/bilder/billdlampe.png">
+        <a href="index.html">
+            <img src="billdlampe.png">
         </a>
 
     </div>
@@ -23,33 +23,33 @@
     <div class="navigation-container">
 
         <!-- Items erstellen-->
-        <div class="navigation-item"><a href="/Startseite/index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="/Produkte/Produkte.html">Produkte</a></div>
-        <div class="navigation-item"><a href="/Team/Team.html">Team</a></div>
-        <div class="navigation-item"><a href="/Über Uns/überuns.html">Über Uns</a></div>
+        <div class="navigation-item"><a href="index.html">Startseite</a></div>
+        <div class="navigation-item"><a href="produkt.html">Produkte</a></div>
+        <div class="navigation-item"><a href="team.html">Team</a></div>
+        <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
 
     <ul class="breadcrumbs1">
 
         <li class="breadcrumbs__item">
-            <a href="/Produkte/Produkte.html" class="breadcrumbs__link">Styles</a>
+            <a href="produkt.html" class="breadcrumbs__link">Styles</a>
         </li>
 
         <li class="breadcrumbs__item">
-            <a href="/Home/Home.html" class="breadcrumbs__link">Home</a>
+            <a href="home.html" class="breadcrumbs__link">Home</a>
         </li>
 
         <li class="breadcrumbs__item">
-            <a href="/Sven/Sven.html" class="breadcrumbs__link--active">Sven</a>
+            <a href="sven.html" class="breadcrumbs__link--active">Sven</a>
         </li>
     </ul>
 
     <div class="Produkt-container">
         <div class="Produkt-Bild">
-            <img src="/Bilder/Sven.jpg" class="img">
+            <img src="Sven.jpg" class="img">
         </div>
 
 
