--- a/ueberuns.html
+++ b/ueberuns.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Über Uns</title>
-    <link rel="stylesheet" href="überuns.css">
+    <link rel="stylesheet" href="ueberuns.css">
 </head>
 
 <body>
     <!--Bild ganz oben einfügen-->
     <div class="header-container">
-        <a href="/Startseite/index.html">
-            <img src="/bilder/billdlampe.png">
+        <a href="index.html">
+            <img src="billdlampe.png">
         </a>
 
     </div>
@@ -23,21 +23,21 @@
     <div class="navigation-container">
 
         <!-- Items erstellen-->
-        <div class="navigation-item"><a href="/Startseite/index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="/Produkte/Produkte.html">Produkte</a></div>
-        <div class="navigation-item"><a href="/Team/Team.html">Team</a></div>
-        <div class="navigation-item"><a href="/Über Uns/überuns.html">Über Uns</a></div>
+        <div class="navigation-item"><a href="index.html">Startseite</a></div>
+        <div class="navigation-item"><a href="produkt.html">Produkte</a></div>
+        <div class="navigation-item"><a href="team.html">Team</a></div>
+        <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
 
     </div>
-    <div class="imglupe"><img src="/Bilder/lupe.png" width="25px" height="25px"></div>
+    <div class="imglupe"><img src="lupe.png" width="25px" height="25px"></div>
 
     <h1 class="Kontakformular">Über Uns</h1>
 
     <div class="Hauptcontainer2">
 
         <div class="Bildconainer2">
-            <img src="/Bilder/david-fanatan-OlRvkh6mtas-unsplash.jpg" class="img">
+            <img src="david-fanatan-OlRvkh6mtas-unsplash.jpg" class="img">
         </div>
 
         <div class="Textcontainer">
@@ -70,7 +70,7 @@
         </div>
 
         <div class="Bildconainer">
-            <img src="/Bilder/nastuh-abootalebi-eHD8Y1Znfpk-unsplash.jpg" class="img">
+            <img src="nastuh-abootalebi-eHD8Y1Znfpk-unsplash.jpg" class="img">
         </div>
     </div>
 
@@ -80,7 +80,7 @@
 
         <div class="Bildconainer2">
 
-            <img src="/Bilder/spacejoy-GNs831kqdoM-unsplash.jpg" class="img">
+            <img src="spacejoy-GNs831kqdoM-unsplash.jpg" class="img">
         </div>
 
         <div class="Textcontainer">
@@ -114,7 +114,7 @@
 
         <div class="Bildcontainer3">
 
-            <img src="/Bilder/jean-philippe-delberghe-Ry9WBo3qmoc-unsplash.jpg" class="img">
+            <img src="jean-philippe-delberghe-Ry9WBo3qmoc-unsplash.jpg" class="img">
         </div>
     </div>
 
@@ -139,11 +139,11 @@
             </div>
 
             <div class="kleinercontainera">
-                <a href="/Kontaktformular/Kontaktformular.html" class="link">Kontakformular</a><br><br>
-                <a href="/herstellungdesign/herstellungdesign.html" class="link">Herstellung & Design</a><br><br>
-                <a href="/showroom/showroom.html" class="link">Showroom</a><br><br>
-                <a href="/dienstleistungen/dienstleistungen.html" class="link">Dienstleistungen</a><br><br>
-                <a href="/SmartSchubertm/smartschuber.html" class="link">SmartSchuber™</a>
+                <a href="kontaktformular.html" class="link">Kontakformular</a><br><br>
+                <a href="herstellungdesign.html" class="link">Herstellung & Design</a><br><br>
+                <a href="showroom.html" class="link">Showroom</a><br><br>
+                <a href="dienstleistungen.html" class="link">Dienstleistungen</a><br><br>
+                <a href="smartschuber.html" class="link">SmartSchuber™</a>
 
             </div>
 
