--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
 
         <!-- Items erstellen-->
         <div class="navigation-item"><a href="index.html">Startseite</a></div>
-        <div class="navigation-item"><a href="produkte.html">Produkte</a></div>
+        <div class="navigation-item"><a href="produkt.html">Produkte</a></div>
         <div class="navigation-item"><a href="team.html">Team</a></div>
         <div class="navigation-item"><a href="ueberuns.html">Über Uns</a></div>
 
